--- a/csharp/PmTask/PmTask.csproj
+++ b/csharp/PmTask/PmTask.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
+      <PackageReference Include="Microsoft.OData.Core" Version="7.17.0" />
       <PackageReference Include="Simple.OData.Client" Version="6.0.1" />
     </ItemGroup>
 
