--- a/typescript/package.json
+++ b/typescript/package.json
@@ -7,11 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "ts-node-dev --respawn ./src/index.ts",
-    "start": "ts-node ./src/index.ts"
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "devDependencies": {
     "@types/node": "^20.8.4",
     "ts-node": "^10.9.1",
