--- a/typescript/package.json
+++ b/typescript/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@types/node": "^20.8.4",
     "ts-node": "^10.9.1",
