--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
       "target": "es6",
-      "module": "commonjs",
+      "module": "node16",
       "outDir": "dist",
       "rootDir": "src",
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "moduleResolution": "node16"
     },
     "lib": [
-      "es2017"
+      "dom", "es2015"
     ],
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
