--- a/java/pom.xml
+++ b/java/pom.xml
@@ -5,8 +5,8 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.projectmanager</groupId>
-    <artifactId>example</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>exampleApp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -35,7 +35,7 @@
               <archive>
                 <manifest>
                   <addClasspath>true</addClasspath>
-                  <mainClass>com.projectmanager.Example</mainClass>
+                  <mainClass>com.example.ExampleApp</mainClass>
                 </manifest>
               </archive>
             </configuration>
