--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "typescript",
-  "version": "1.0.0",
-  "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf ./dist",
     "build": "tsc",
-    "dev": "ts-node-dev --respawn ./src/index.ts",
     "start": "node ./dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "devDependencies": {
     "@types/node": "^20.8.4",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "projectmanager-sdk": "file:../../projectmanager-sdk-typescript/projectmanager-sdk-11.1.2053.tgz"
+    "projectmanager-sdk": "^97.0.2178"
   }
 }
