--- a/csharp/PmTask/PmTask.csproj
+++ b/csharp/PmTask/PmTask.csproj
@@ -2,15 +2,15 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
-      <PackageReference Include="Microsoft.OData.Core" Version="7.17.0" />
-      <PackageReference Include="ProjectManager.SDK" Version="102.0.2949" />
+      <PackageReference Include="ProjectManager.SDK" Version="114.0.4169" />
       <PackageReference Include="Simple.OData.Client" Version="6.0.1" />
     </ItemGroup>
 
