--- a/csharp/PmTask/PmTask.csproj
+++ b/csharp/PmTask/PmTask.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
+      <PackageReference Include="CSVFile" Version="3.1.2" />
       <PackageReference Include="ProjectManager.SDK" Version="114.0.4169" />
       <PackageReference Include="Simple.OData.Client" Version="6.0.1" />
     </ItemGroup>
