--- a/csharp/PmTask/PmTask.csproj
+++ b/csharp/PmTask/PmTask.csproj
@@ -2,16 +2,19 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
-      <PackageReference Include="Microsoft.OData.Core" Version="7.17.0" />
-      <PackageReference Include="ProjectManager.SDK" Version="102.0.2949" />
-      <PackageReference Include="Simple.OData.Client" Version="6.0.1" />
+      <PackageReference Include="CSVFile" Version="3.2.0" />
+      <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="8.0.0" />
+      <PackageReference Include="ProjectManager.SDK" Version="115.0.4328" />
+      <PackageReference Include="RestSharp" Version="111.4.1" />
+      <PackageReference Include="RunProcessAsTask" Version="1.2.4" />
     </ItemGroup>
 
 </Project>
